--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,12 @@ scrollbar start
   width: 10px;
 }
 
+
+/* alert notification */
+.mx-1 ::-webkit-scrollbar {
+  width: 0px;
+  }
+
 /* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey; 
@@ -34,7 +40,6 @@ scrollbar start
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(34, 74, 190, 0.3);
- 
 }
 /* -----------------------
 scrollbar end
